--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -1,7 +1,7 @@
 div
 {
   color: white;
-  color-background: #ff0000;
+  background-color: red;
   font-size: 32px;
   text-align: center;
   font-weight: bold;
